import java.time.Duration

//file:noinspection SpellCheckingInspection

plugins {
    id 'java'
    id 'jacoco'
    id 'org.jetbrains.kotlin.jvm' version '2.0.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jacocoTestReport {
    reports {
        xml.enabled true
        xml.outputLocation.set(file("$buildDir/reports/jacoco/test/xml/index.xml"))
        html.enabled false
    }
}

test {
    useJUnitPlatform()
    jvmArgs += '--enable-preview'
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
    // Set a timeout for tests to prevent hanging tests
    timeout = Duration.ofMinutes(2)
}


group 'cyder-utils'
version '0.1.0'

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
}

allprojects {
    repositories {
        google()
        mavenCentral()
        maven { url 'https://jitpack.io' }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

ext {
    annotationsVersion = '23.0.0'
    guavaVersion = '31.1-jre'
    gsonVersion = '2.10'
    jsoupVersion = '1.15.2'
    jlayerVersion = '1.0.1'
    javaulatorVersion = '3.0.3'
    commonsVersion = '3.12.0'
    commonsTextVersion = '1.9'
    httpClientVersion = '4.5.13'
    commonsIoVersion = '20030203.000550'
    inflectorVersion = '1.3'
    junitVersion = '5.9.1'
    zip4jVersion = '2.11.5'
    gravatarClientHash = '1e5e343'
}

dependencies {
    implementation 'org.jetbrains:annotations:' + annotationsVersion
    implementation 'com.google.guava:guava:' + guavaVersion
    implementation 'com.google.code.gson:gson:' + gsonVersion
    implementation 'org.jsoup:jsoup:' + jsoupVersion
    implementation 'javazoom:jlayer:' + jlayerVersion
    implementation 'com.fathzer:javaluator:' + javaulatorVersion
    implementation 'org.apache.commons:commons-lang3:' + commonsVersion
    implementation 'org.apache.commons:commons-text:' + commonsTextVersion
    implementation 'org.apache.httpcomponents:httpclient:' + httpClientVersion
    implementation 'commons-io:commons-io:' + commonsIoVersion
    implementation 'org.atteo:evo-inflector:' + inflectorVersion
    implementation 'org.junit.jupiter:junit-jupiter-api:' + junitVersion
    implementation 'net.lingala.zip4j:zip4j:' + zip4jVersion
    implementation 'com.github.nathancheshire:gravatarjavaclient:' + gravatarClientHash

    // Test
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:' + junitVersion
    testImplementation 'org.mockito:mockito-junit-jupiter:4.5.1'
    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'

    // Selenium dependencies
    implementation 'org.seleniumhq.selenium:selenium-java:4.21.0'
    implementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}


build.dependsOn(compileJava, compileTestJava)
repositories {
    mavenCentral()
}
compileKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
